Sun Aug  3 21:14:33 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* README: Note KLUDGE_FOR_WNT_TESTSUITE when discussing tests.

Fri Jul 18 09:49:52 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* README: Adjust discussion of makefiles to deal with Visual C++
	5.x.  One doesn't need patch if client and server are current.

10 Jul 1997  Jim Kingdon

	* config.h: Define USE_SETMODE_STDOUT.

8 Jul 1997  Jim Kingdon

	* rcmd.c (rcmd_authenticate): With error message, print the
	user names that we were attempting to use.
	* win32.c (win32getlogin): If GetUserName returns "", return
	NULL.

Sun, 22 Jun 1997  Jim Kingdon

	* win32.c: Also include winsock.h.
	Include stdlib.h (for exit()).
	* rcmd.c: Move include of cvs.h above test of HAVE_WINSOCK_H.

Tue Jun 17 16:35:06 1997  Jim Kingdon  (unknown@beezley)

	* rcmd.c: Check HAVE_WINSOCK_H in figuring out which files
	to include (see comment about making this portable).  If not
	HAVE_WINSOCK_H, make various #definitions.
	* rcmd.c (init_winsock): Move from here...
	* win32.c: ...to here.
	* rcmd.c (bind_and_connect, resolve_address): Shut up gcc -Wall
	(which doesn't know that error (1, ...) doesn't return).

Sun Jun  8 23:43:21 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* config.h (HAVE_MKFIFO): Remove; not used anywhere.

Sat May  3 11:15:46 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcmd.c: Add "copyright" notice.

Thu Apr 17 00:15:36 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Makefile.in: Add sockerror.c.

Wed Apr  9 15:29:45 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c (expand_wild): Add comments about "." and comparing
	NULL pointers.

8 Apr 1997  Jim Kingdon

	* rcmd.c: Instead of returning -1 and passing that back to
	startserver.c which will print a very vague error message, call
	error() right away with a specific message.  This also fixes
	some places where we had bogusly called GetLastError instead of
	WSAGetLastError.