@@ -1,3 +1,8 @@
+Sun Aug 10 21:08:12 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* ndir.c, ndir.h, pwd.c, pwd.h: Remove $Header; we decided to
+	get rid of these some time ago.
+
 Sun Aug  3 21:14:33 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* README: Note KLUDGE_FOR_WNT_TESTSUITE when discussing tests.
